@@ -1,6 +1,5 @@
-{% extends "wagtailadmin/base.html" %}
+{% extends "wagtailadmin/generic/base.html" %}
 {% load i18n %}
-{% block titletag %}{% trans "Delete user" %}{% endblock %}
 
 {% block content %}
     {% trans "Delete user" as del_str %}
